# watchdog

./: .env.format  .gitignore  README.md  main.py  pyproject.toml
core/: alerts.py  camera.py  detection.py
